--- a/index.html
+++ b/index.html
@@ -79,8 +79,9 @@
         </section>
     </aside>
     <!-- changed class footer to footer -->
+    <!-- changed h2 to h4 within the footer to make it more semantic -->
     <footer>
-        <h2>Made with ❤️️ by Horiseon</h2>
+        <h4>Made with ❤️️ by Horiseon</h4>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
